# Billing-System

./: CMakeLists.txt  Makefile  README.md
backend/: package-lock.json  package.json  tsconfig.json
backend/prisma/: dev.db  schema.prisma  seed.ts
backend/src/: index.ts
billing-dashboard/: index.html  package-lock.json  package.json  tailwind.config.ts
billing-dashboard/public/: googleZq6sPE-upRM3Nc8OZKXgpj68SOZBL5kUpXd0XPeGBuU.html  robots.txt  sitemap.xml
billing-dashboard/src/: App.tsx  index.css
billing-dashboard/src/components/: Modals.tsx  ProtectedRoute.tsx
billing-dashboard/src/components/ui/: badge.tsx  card.tsx  input.tsx  label.tsx  table.tsx
billing-dashboard/src/hooks/: usePageTitle.ts
billing-dashboard/src/layouts/: MainLayout.tsx
billing-dashboard/src/pages/: AuditLog.tsx  Customers.tsx  Dashboard.tsx  Invoices.tsx  LandingPage.tsx  Login.tsx  Notifications.tsx  Payments.tsx  Reports.tsx  Settings.tsx  Subscriptions.tsx  Success.tsx  Users.tsx
billing-dashboard/src/store/: auth.ts
billing-dashboard/src/types/: auth.ts
billing-dashboard/src/utils/: api.ts
src/: main.cpp
src/cli/: admin_cli.hpp  cli_helpers.hpp  customer_cli.hpp  invoice_cli.hpp  payment_cli.hpp  report_cli.hpp
src/core/: bplus_tree.hpp  encryption.hpp  lru_cache.hpp  memory_pool.hpp  min_heap.hpp  snowflake.hpp
src/data/: sample_loader.hpp
src/models/: audit_log.hpp  customer.hpp  invoice.hpp  notification.hpp  payment.hpp
src/repository/: customer_repository.hpp  invoice_repository.hpp  payment_repository.hpp
src/service/: audit_service.hpp  billing_engine.hpp  customer_service.hpp  discount_engine.hpp  fraud_detector.hpp  graph_billing.hpp  notification_service.hpp  payment_processor.hpp  rbac_service.hpp  report_service.hpp  tax_engine.hpp
tests/: test_billing_engine.cpp  test_bplus_tree.cpp  test_fraud_detector.cpp  test_harness.hpp  test_lru_cache.cpp  test_payment_processor.cpp  test_rbac.cpp  test_report_service.cpp  test_runner.cpp  test_snowflake.cpp
